# dev_notes

./: .gitignore  CNAME  README.md  abstraction_encapsulation_information_hiding.md  architecture.md  bash.md  blockchains_comparison.md  clean_code.md  enterprise_patterns.md  index.html  lean.md  maven.md  oop_module_2.md  rest.md  spring.md  todo.md  zabbix.md
agile/: basics.md  lean.md  scrum_basics.md
agile/training_pl/: extension.md
algorithms/: README.md  data_structures.md  divide_and_conquer.md  sorting.md
algorithms/algorithms_cpp_code/: .gitignore  CMakeLists.txt
algorithms/algorithms_cpp_code/src/dac/: findMaxSubarray.cpp  findMaxSubarray.h
algorithms/algorithms_cpp_code/src/graphs/: DfsVertex.cpp  DfsVertex.h  Vertex.cpp  Vertex.h  bfs.cpp  bfs.h  dfs.cpp  dfs.h  topologicalSort.cpp  topologicalSort.h  transpose.cpp  transpose.h
algorithms/algorithms_cpp_code/src/sorting/: Heap.cpp  Heap.h  bucketSort.cpp  bucketSort.h  countingSort.cpp  countingSort.h  heapSort.cpp  heapSort.h  insertSort.cpp  insertSort.h  mergeSort.cpp  mergeSort.h  mergeSort2.cpp  mergeSort2.h  quickSort.cpp  quickSort.h
algorithms/algorithms_cpp_code/src/structures/: CircularDoublyLinkedList.h  DoublyLinkedList.h  Heap.h  Node.cpp  Node.h  Queue.cpp  Queue.h
algorithms/algorithms_cpp_code/tests/: heapSortTest.cpp  insertSortTest.cpp  mergeSortTest.cpp
algorithms/algorithms_cpp_code/tests/dac/: findMaxSubarrayTest.cpp
algorithms/algorithms_cpp_code/tests/graphs/: bfsTest.cpp  dfsTest.cpp  topologicalSortTest.cpp
algorithms/algorithms_cpp_code/tests/sorting/: bucketSortTest.cpp  countingSortTest.cpp  heapSortTest.cpp  insertSortTest.cpp  mergeSortTest.cpp  quickSortTest.cpp
algorithms/algorithms_cpp_code/tests/structures/: circularDoublyLinkedListTest.cpp  doublyLinkedListTest.cpp  queueTest.cpp
algorithms/graphs/: basics.md  bfs.md  dfs.md  topological_sort.md
architecture/: README.md  architecture.md  design_patterns_introduction.md  design_patterns_quiz_questions.md  domain_driven_design.md  layering.md  oop_module_2.md  solid.md  system_design.md  web_presentation.md
architecture/fowler/: layering.md  mvc.md
architecture/heads_first/: decorator.md  observer.md  principles.md  strategy.md
architecture/patterns/: patterns.md
clean_code/: README.md  clean_code.md  solid.md
clean_code/solid/: solid.md
css/: basics.md
finances/: budzet_domowy.md  negotiation.md  zakl_firmy.md
freelancing/: info.md
http/: cookies.md  enabling_traceroute_pl.md  http.md  rest.md
http/training_pl/: README.md  extension.md  preparation.md  readme.md  tasks.md
interview/: questions.md
java/: README.md  basics.md  building_blocks.md  equals_hashcode.md  final_static.md  jit_notes.md  jpa.md  lambdas_streams.md  maven.md  parallel_concurrent.md  reference_types.md  spring.md  tdd.md  todo.md  tomcat.md
java/basics/: collections.md  equals_hashcode.md  exception_types.md  final_static.md  interface_vs_abstract_class.md  kafka.md  lambdas_streams.md  reference_types.md
java/multithreading/: ThreadPoolExecutor.md  parallel_concurrent.md
java_persistence/: README.md  jpa.md  persistence_life_cycle.md  transactions.md  transactions_loose_notes.txt
java_persistence/database_basics/: basics.md  concurrency.md  constraints.md  joins.md  optimistic_locking.md  pessimistic_locking.md  preventing_lost_updates.md  referential_integrity_constraints.md  relational_design.md  serializability_implementations.md  transaction_isolation_issues.md  transaction_isolation_levels.md  transactions.md  triggers.md
java_persistence/hibernate/: basics.md  container_environments.md  detached_state.md  isolation_levels.md  jpa_and_hibernate.md  operations.md  optimistic_concurrency_control.md  persistence_life_cycle.md  persistence_lifecycle.md  pesimistic_concurrency_control.md  pessimistic_concurrency_control.md  transaction_isolation_issues.md  transaction_isolation_levels.md  transactions.md  transactions_details.md
java_persistence/jdbc/: basics.md  statements.md
java_persistence/sql/: joins.md
javascript/: basics.md  variable_scopes.md
jvm/: build_jvm.md
jvm/training_pl/: readme.md  zadania.md
oop/: design_patterns.md  todo
sandbox/: mermaid_sandbox.md
security/: README.md  basics.md  cookies.md  jwt.md  keycloak.md  readme.md  todo.md
software_planning/: choosing_app_name.md  planning_webapplication.md
spring/: README.md  configuration_classes.md  dependencies.md  overview.md
(+30 files in other folders)
